# blog-app

./: .gitignore  Dockerfile  docker-compose.yml  env.example  get_token.sh  setup-keycloak.sh
.github/workflows/: build-push-backend.yml  ci-backend.yml
backend/: Cargo.toml  README_LOCAL_DEV.md  posts.json
backend/posts/: another-post.md  hello-world.md  test-post-with-test-token.md  test-post.md  test-token-post.md
backend/src/: main.rs  utils.rs
backend/src/auth/: jwt.rs  mod.rs
backend/src/auth/jwt/: test_token.rs
backend/src/markdown/: mod.rs  reader.rs  writer.rs
backend/src/routes/: admin.rs  mod.rs  posts.rs  preview.rs
keycloak-config/blog-realm/: realm.json
keycloak-config/blog-realm/account/: account.json
keycloak-config/blog-realm/client/: client.json
keycloak-config/blog-realm/roles/: roles.json
nginx/: nginx.conf
